# autonomous-product-factory

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  package.json  pyproject.toml
.apf/: config.yaml.example
.claude/: settings.local.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  release.yml
cli/: pyproject.toml
cli/apf_cli/: client.py  config_schema.py  main.py
cli/apf_cli/commands/: artifacts.py  auth.py  config.py  integrations.py  logs.py  run.py  status.py
deploy/: .env.example  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  init-db.sh
deploy/aws/: cloudformation.yml  deploy.sh  teardown.sh
docs/: architecture.md  engineering_plan.md  market_analysis.md  prd.md  ux_spec.md
reports/: qa_report.json
scripts/: _gen.py  run-tests.sh  setup-dev.sh
services/agent-runner/: Dockerfile  pyproject.toml
services/agent-runner/apf_agent_runner/: __init__.py  config.py  llm.py  llm_factory.py  main.py  runner.py
services/agent-runner/apf_agent_runner/agents/: __init__.py  _base.py  architect.py  base.py  developer.py  devops.py  engineering.py  market.py  prd.py  qa.py  readme.py  regression.py  review.py  ux.py
services/agent-runner/apf_agent_runner/sast/: secret_scan.py
services/agent-runner/tests/: conftest.py
services/agent-runner/tests/unit/: test_agents.py  test_sast.py
services/artifact-store/: Dockerfile  pyproject.toml
services/artifact-store/apf_artifact_store/: __init__.py  config.py  main.py  models.py  state.py  store.py
services/artifact-store/apf_artifact_store/api/: artifacts.py  health.py
services/artifact-store/apf_artifact_store/backends/: __init__.py  base.py  local.py  s3.py
services/artifact-store/tests/: conftest.py
services/artifact-store/tests/integration/: test_artifacts_api.py
services/artifact-store/tests/unit/: test_local_backend.py  test_s3_backend.py  test_store.py
services/aws-connector/: Dockerfile  pyproject.toml
services/aws-connector/apf_aws/: config.py  deployer.py  main.py
services/aws-connector/tests/: test_aws.py
services/confluence-connector/: Dockerfile  pyproject.toml
services/confluence-connector/apf_confluence/: client.py  config.py  main.py
services/dashboard/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
services/github-integration/: Dockerfile  pyproject.toml
services/github-integration/apf_github/: client.py  config.py  main.py
services/github-integration/apf_github/api/: webhooks.py
services/jira-connector/: Dockerfile  pyproject.toml
services/jira-connector/apf_jira/: client.py  config.py  main.py
services/jira-connector/tests/: test_jira.py
services/orchestrator/: Dockerfile  pyproject.toml
services/orchestrator/apf_orchestrator/: __init__.py  config.py  db.py  deps.py  events.py  main.py
services/orchestrator/apf_orchestrator/api/: __init__.py  artifacts.py  auth.py  connectors.py  health.py  pipelines.py  stages.py  websocket.py
services/orchestrator/apf_orchestrator/core/: auth.py  checkpoint.py  dag.py  engine.py  retry.py
services/orchestrator/apf_orchestrator/middleware/: __init__.py  auth.py  logging.py
services/orchestrator/tests/: conftest.py
services/orchestrator/tests/integration/: test_connectors_api.py  test_pipelines_api.py
services/orchestrator/tests/unit/: test_auth.py  test_dag.py
services/slack-connector/: Dockerfile  pyproject.toml
(+23 files in other folders)
