[project]
name = "apf-jira-connector"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.111", "uvicorn[standard]>=0.30", "pydantic>=2.7", "pydantic-settings>=2.2", "httpx>=0.27"]
[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-cov>=5"]
[tool.pytest.ini_options]
asyncio_mode = "auto"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
